--- a/source/less/features.less
+++ b/source/less/features.less
@@ -3,7 +3,7 @@
   background-color: #d9dade;
   width: 320px;
   height: 489px;
-  background: url("/img/hero-mobile@1x.jpg") no-repeat;
+  background-image: url("/img/hero-mobile@1x.jpg");
   background-position: -127px -18px;
 }
 
@@ -25,7 +25,7 @@
 .features__section--link {
   text-decoration: none;
   color: #ffffff;
-  font-family: "Open Sans", Arial, serif;
+  font-family: "Open Sans", "Arial", serif;
   font-weight: bold;
   font-size: 19px;
   line-height: 24px;
