--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,42 +1,238 @@
 .page-header {
-  width: auto;
   background-color: #ffffff;
-  position: relative;
-}
-
-.page-header__logo {
-  display: block;
-  padding-top: 21px;
-  padding-bottom: 18px;
-  text-align: center;
-  border-bottom: 1px solid #ececec;
-  border-top: 1px solid #ececec;
-}
-
-.page-header__menu--button {
-  position: absolute;
-  top: 31px;
-  right: 25px;
-  background-color: #ffffff;
-  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .page-header__nav {
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
+  flex-wrap: wrap;
+  justify-content: stretch;
+  align-items: center;
 }
 
-.page-header__nav-item {
+.page-header__nav ul {
+  width: 100%;
+  list-style: none;
   display: none;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.page-header__nav a {
+  display: block;
+  text-align: left;
   text-decoration: none;
   font-family: "Open Sans", "Arial", serif;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
   color: #000000;
-  padding: 30px;
-  border-bottom: 1px solid #ececec;
+}
+
+.page-header__nav .page-header_list--on {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.page-header__nav .page-header__menu--button {
+  display: none;
+}
+
+.page-header__user-list li {
+  position: relative;
+}
+
+.page-header__user-list .basket-icon::before,
+.page-header__user-list .search-icon::before {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 19px;
+  background-image: url("../img/icon-search.svg");
+  background-repeat: no-repeat;
+  opacity: 0.3;
+  top: 30px;
+  left: 30px;
+}
+
+.page-header__user-list .basket-icon::before {
+  background-image: url("../img/icon-cart.svg");
+}
+/*mobile-version*/
+@media (min-width: 150px) and (max-width: 767px) {
+  .page-header__nav li {
+    width: 100%;
+    padding: 30px 10px 30px 75px;
+    border-bottom: 1px solid #ececec;
+  }
+
+  .page-header__logo {
+    display: block;
+    position: relative;
+    padding: 23px 30px 18px;
+    text-align: center;
+    border-bottom: 1px solid #ececec;
+  }
+
+  .page-header--logo-image {
+    width: 86px;
+    height: 35px;
+  }
+
+  .page-header__nav .page-header__menu--button {
+    display: block;
+    position: absolute;
+    top: 32px;
+    right: 23px;
+    background-color: #ffffff;
+    border: none;
+  }
+
+  .page-header__nav .page-header__delivery,
+  .page-header__nav .page-header__pop-list {
+    display: none;
+  }
+}
+/*tablet-version*/
+@media (min-width: 768px) {
+  .page-header {
+    display: flex;
+    position: relative;
+  }
+
+  .page-header .page-header__logo {
+    position: absolute;
+    left: 50px;
+    top: 10px;
+    width: 170px;
+  }
+
+  .page-header .page-header__nav {
+    background-color: #fafafa;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+
+  .page-header__nav .page-header__user-list {
+    background-color: #ffffff;
+    display: flex;
+    padding: 0 50px;
+    margin-left: auto;
+    order: -1;
+    justify-content: flex-end;
+    border-bottom: 1px solid #ececec;
+  }
+
+  .page-header__user-list li {
+    border-left: 1px solid #ececec;
+    padding-left: 85px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  .page-header__user-list a {
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+  .search-icon a {
+    font-size: 0;
+  }
+
+  .page-header__nav .page-header__nav-list {
+    display: flex;
+    width: auto;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 50px;
+  }
+
+  .page-header__nav-list a {
+    font-size: 15px;
+    line-height: 24px;
+    padding-left: 35px;
+  }
+
+  .page-header__nav .page-header__delivery {
+    display: block;
+    color: #878787;
+    font-size: 15px;
+    line-height: 24px;
+    font-family: "Open Sans", "Arial", serif;
+    font-weight: normal;
+    padding: 20px 50px 15px;
+  }
+}
+/*desktop-version*/
+@media (min-width: 1250px) {
+
+  .page-header {
+ /*padding-left: 50px;
+ padding-right: 50px;*/
+ background-color: #f9f9f9;
+
+  }
+  .page-header .page-header__logo {
+    position: absolute;
+    left: 50%;
+    top: 10px;
+    width: 160px;
+  }
+
+  .page-header__nav .page-header__user-list {
+    box-sizing: border-box;
+    padding: 0;
+    padding-right: 50px;
+    margin: 0;
+    flex-wrap: nowrap;
+    width: 50%;
+    order: 0;
+    justify-content: flex-end;
+    border-bottom: 1px solid #ececec;
+  }
+
+  .page-header__user-list .basket-icon a{
+    padding-right: 50px;
+  }
+  .page-header__nav .page-header__nav-list {
+    box-sizing: border-box;
+    width: 50%;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    padding: 0;
+    padding-left: 50px;
+    margin: 0;
+    border-bottom: 1px solid #ececec;
+  }
+  .page-header__nav-list a {
+    text-align: left;
+    width: 220px;
+    padding: 30px 5px 36px 55px;
+  }
+
+  .page-header__nav .page-header__pop-list {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    width: 50%;
+    padding-left: 50px;
+  }
+
+  .page-header__pop-list a {
+    width: 220px;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: bold;
+    text-align: left;
+    padding: 18px 5px 18px 55px;
+  }
+  .page-header__nav .page-header__delivery {
+    padding-right: 100px;
+  }
 }
