--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,22 +2,27 @@
 @import "page-header.less";
 @import "features.less";
 @import "main-heading.less";
+@import "promo-item.less";
+@import "short-info.less";
+@import "reviews.less";
+@import "button.less";
 
 @font-face {
   font-family: "Open Sans";
-  src: url("/fonts/opensans.woff"), url("/fonts/opensans.woff") format("woff"), url("/fonts/opensans.woff2") format("woff2");
+  src: url("/fonts/opensans.woff") format("woff"), url("/fonts/opensans.woff2") format("woff2");
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("/fonts/opensansbold.woff"), url("/fonts/opensansbold.woff") format("woff"), url("/fonts/opensansbold.woff2") format("woff2");
+  src: url("/fonts/opensansbold.woff") format("woff"), url("/fonts/opensansbold.woff2") format("woff2");
   font-style: normal;
   font-weight: bold;
 }
 
 body {
+  background-color: #ffffff;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
