--- a/source/less/button.less
+++ b/source/less/button.less
@@ -8,6 +8,7 @@
   padding: 17px 0;
   text-align: center;
   border: 2px solid #000000;
+  font-weight: bold;
   text-transform: uppercase;
   line-height: 20px;
   color: #444444;
