--- a/source/less/promo-item.less
+++ b/source/less/promo-item.less
@@ -1,35 +1,32 @@
-
 /*mobile-version*/
+
 .promo-item {
-  padding: 37px 30px;
-  margin: 0;
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: relative;
-  font-family: "Open Sans", "Arial", serif;
-  font-size: 17px;
-  line-height: 24px;
-  color: #444444;
+  padding: 37px 30px;
+  margin: 0;
+  color: @light-black;
   text-align: left;
   font-weight: bold;
 }
 
 .promo-item .promo-item__heading {
+  display: block;
   margin: 0;
   padding: 0;
   margin-bottom: 10px;
-  display: block;
   font-size: 25px;
   line-height: 30px;
 }
 
 .promo-item .promo__ad {
+  display: block;
   margin: 0;
   padding: 0;
   margin-bottom: 25px;
-  display: block;
   line-height: 20px;
-  color: #63d1bb;
+  color: @light-blue;
   text-transform: uppercase;
 }
 
@@ -38,12 +35,11 @@
 }
 
 .promo-item .promo-item__desc {
+  display: block;
   margin: 0;
   padding: 0;
   margin-bottom: 30px;
-  display: block;
   font-size: 15px;
-  font-weight: normal;
 }
 
 .promo-item .promo-item__table {
@@ -55,8 +51,7 @@
 
 .promo-item .promo-item__table td {
   font-size: 15px;
-  font-weight: normal;
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid @gray;
   padding: 10px 10px 10px 0;
 }
 
@@ -73,26 +68,25 @@
 }
 
 .promo-item .promo-item__buy {
-  box-sizing: border-box;
-  width: 260px;
   display: block;
-  text-decoration: none;
+  width: 260px;
   margin: 0 auto;
   padding: 17px 0;
-  text-align: center;
-  border: 2px solid #000000;
+  text-decoration: none;
   text-transform: uppercase;
+  text-align: center;
   line-height: 20px;
-  color: #444444;
+  border: 2px solid @black;
+  color: @light-black;
 }
 
 .promo-item::after {
   position: absolute;
-  width: 100%;
-  height: 6px;
   content: "";
   left: 0;
   bottom: 0;
+  width: 100%;
+  height: 6px;
   background-image: url("../img/bg-zigzag-line.svg");
   background-repeat: repeat;
   background-size: contain;
@@ -101,11 +95,10 @@
 @media (min-width: 768px) {
   .promo-item {
     position: relative;
-    box-sizing: border-box;
-    padding: 40px 50px;
-    margin: 0;
     justify-content: stretch;
     align-items: flex-start;
+    padding: 40px 50px;
+    margin: 0;
   }
 
   .promo-item .promo-item__heading {
@@ -117,10 +110,10 @@
 
   .promo-item .promo__ad {
     position: absolute;
-    line-height: 17px;
-    text-align: center;
     top: 45px;
     right: 75px;
+    line-height: 17px;
+    text-align: center;
   }
 
   .promo-item .promo__ad br {
@@ -128,16 +121,13 @@
   }
 
   .promo-item .promo-item__desc {
-    box-sizing: border-box;
     width: 290px;
-    font-size: 17px;
-    line-height: 30px;
     margin-bottom: 40px;
     margin-right: 45px;
+    line-height: 30px;
   }
 
   .promo-item .promo-item__table {
-    box-sizing: border-box;
     width: 290px;
     margin-bottom: 20px;
     margin-right: 45px;
@@ -149,17 +139,17 @@
 
   .promo-item .promo-item__img {
     position: absolute;
-    width: 334px;
-    height: 406px;
     bottom: 50px;
     right: 50px;
+    width: 334px;
+    height: 406px;
+    z-index: -1;
   }
 
   .promo-item .promo-item__price {
-    box-sizing: border-box;
-    font-size: 20px;
     width: 290px;
     margin: 20px 45px 20px 0;
+    font-size: 20px;
   }
 
   .promo-item .promo-item__buy {
@@ -167,10 +157,10 @@
     margin: 15px 45px 0 0;
     padding: 17px 0;
     text-align: center;
-    border: 2px solid #000000;
+    border: 2px solid @black;
     text-transform: uppercase;
     line-height: 20px;
-    color: #444444;
+    color: @light-black;
   }
 
   .promo-item::after {
@@ -181,7 +171,6 @@
 @media (min-width: 1250px) {
   .promo-item {
     position: relative;
-    box-sizing: border-box;
     padding: 135px 0 70px 175px;
     margin: 0 100px;
   }
@@ -193,20 +182,20 @@
   }
 
   .promo-item .promo__ad {
-    width: 120px;
     position: absolute;
     left: -20px;
     top: 145px;
+    width: 120px;
     line-height: 17px;
     text-align: center;
   }
 
   .promo-item .promo-item__img {
     z-index: -1;
-    width: 525px;
-    height: 640px;
     bottom: 70px;
     right: 0;
+    width: 525px;
+    height: 640px;
   }
 
   .promo-item::after {
