--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -1,19 +1,3 @@
-/*<section class="reviews">
-<h2 class="reviews__heading main-heading">Отзывы</h2>
-<article class="reviews__post">
-  <span class="rewiews-post--main">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более
-    стильными, а также набирают больше лайков!</span>
-  <b class="rewiews-post--author">Анастасия Красильникова</b>
-  <span class="rewiews-post--insta">&#64;misssssiskras</span>
-</article>
-<div class="reviews__controls">
-  <a class="reviews__skip reviews__skip--left" href="#"></a>
-  <a class="reviews__skip reviews__skip--right" href="#"></a>
-</div>
-<a class="reviews__write button" href="#">Написать</a>
-</section>
-*/
-
 .reviews {
   position: relative;
   display: flex;
@@ -28,15 +12,14 @@
 }
 
 .reviews .reviews__post {
-  font-family: "Open Sans", "Arial", serif;
-  font-size: 15px;
-  line-height: 30px;
-  text-align: left;
-  color: #444444;
   display: flex;
   flex-direction: column;
   margin: 0;
   padding: 0;
+  font-size: 15px;
+  line-height: 30px;
+  text-align: left;
+  color: @light-black;
 }
 
 .reviews__post .reviews__post--main {
@@ -44,32 +27,129 @@
 }
 
 .reviews__post .reviews__post--author {
-  font-size: 17px;
   line-height: 30px;
   font-weight: bold;
-  color: #000000;
+  color: @black;
 }
 
 .reviews__post .reviews__post--insta {
-  font-size: 17px;
-  line-height: 30px;
-  font-weight: normal;
   margin-bottom: 30px;
+  line-height: 30px;
 }
 
 .reviews .reviews__write {
-font-size: 15px;
-line-height: 30px;
+  font-size: 15px;
+  line-height: 30px;
+}
+
+.reviews .reviews__controls {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 260px;
+  height: 50px;
+  margin-bottom: 40px;
+  border: 1px solid @gray;
+}
+
+.reviews__controls .reviews__skip {
+  text-align: center;
+  width: 129px;
+}
+
+.reviews__skip svg {
+  fill: @black;
+}
+
+.reviews__skip--left {
+  border-right: 1px solid #ececec;
 }
 
 .reviews::after {
   position: absolute;
+  content: "";
   width: 100%;
   height: 6px;
-  content: "";
   left: 0;
   bottom: 0;
   background-image: url("../img/bg-zigzag-line.svg");
   background-repeat: repeat;
   background-size: contain;
+}
+/*tablet-version*/
+@media (min-width:768px) {
+  .reviews {
+    padding: 0 50px;
+    background-image: url("../img/review@1x.jpg");
+    background-position: top 0 left -50px;
+    background-repeat: no-repeat;
+  }
+
+  .reviews .reviews__heading {
+    margin: 80px 0 60px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .reviews .reviews__post {
+    font-size: 17px;
+  }
+
+  .reviews__post .reviews__post--main {
+    margin-bottom: 65px;
+  }
+
+  .reviews__post .reviews__post--insta {
+    margin-bottom: 120px;
+  }
+
+  .reviews .reviews__write {
+    position: absolute;
+    top: 80px;
+    right: 50px;
+    width: 170px;
+    margin: 0;
+    padding: 10px auto;
+    font-size: 15px;
+    line-height: 30px;
+  }
+
+  .reviews .reviews__controls {
+    position: absolute;
+    bottom: 120px;
+    right: 50px;
+    width: 170px;
+    margin: 0;
+    border: none;
+  }
+
+  .reviews::after {
+    height: 15px;
+  }
+}
+/*desktop-version*/
+@media (min-width:1250px) {
+  .reviews {
+    margin: 0 100px;
+    padding: 0 0 0 175px;
+    background-position: top 0 left 0;
+  }
+
+  .reviews__post .reviews__post--insta {
+    margin-bottom: 165px;
+  }
+
+  .reviews .reviews__write {
+    right: 0;
+    width: 170px;
+  }
+
+  .reviews .reviews__controls {
+    bottom: 165px;
+    right: 0;
+  }
+
+  .reviews::after {
+    height: 21px;
+  }
 }
