--- a/source/less/short-info.less
+++ b/source/less/short-info.less
@@ -6,30 +6,29 @@
 }
 
 .short-info .short-info__heading {
-  width: 100%;
+  width: auto;
   padding: 0;
   margin: 0;
   text-align: left;
 }
 
 .short-info .short-info__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: "Open Sans", "Arial", serif;
-  font-size: 17px;
+  padding: 0;
+  margin: 0 auto;
+  color: @black;
+  list-style: none;
   line-height: 20px;
-  color: #000000;
   text-align: left;
   font-weight: bold;
 }
 
 .short-info .short-info__item {
   position: relative;
-  padding-top: 90px;
+  width: 260px;
+  padding-top: 80px;
 }
 
 .short-info .short-info__item svg {
@@ -39,14 +38,13 @@
   bottom: 50px;
 
   & path {
-    fill: #63d1bb;
+    fill: @light-blue;
   }
 }
 /*tablet-version*/
 @media (min-width: 767px) {
   .short-info {
     margin: 50px 50px 80px;
-    height: 635px;
   }
 
   .short-info .short-info__heading {
@@ -55,24 +53,47 @@
   }
 
   .short-info .short-info__list {
-    width: 335px;
-    flex-direction: column;
+    width: 668px;
+    flex-direction: row;
     flex-wrap: wrap;
+    margin: 0;
     font-size: 20px;
     line-height: 22px;
     text-align: left;
   }
 
   .short-info .short-info__item {
-    padding-top: 120px;
     width: 335px;
+    padding-top: 120px;
+ &:nth-child(1) {
+    order: 1;
   }
+
+  &:nth-child(2) {
+    order: 5;
+  }
+
+  &:nth-child(3) {
+    order: 3;
+  }
+
+  &:nth-child(4) {
+    order: 2;
+  }
+
+  &:nth-child(5) {
+    order: 4;
+  }
+
+  &:nth-child(6) {
+    order: 6;
+  }
+}
 }
 /*desktop-version*/
 @media (min-width: 1250px) {
   .short-info {
     margin: 50px 50px 80px;
-    height: 660px;
     padding-left: 225px;
     padding-right: 175px;
   }
@@ -87,7 +108,7 @@
   }
 
   .short-info .short-info__item {
-    padding-top: 120px;
     width: 350px;
+    padding-top: 120px;
   }
 }
