--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,10 @@
+@import "global.less";
+@import "normalize.less";
+@import "fonts.less";
 @import "visually-hidden.less";
+@import "variables.less";
+@import "index-wrapper.less";
+
 @import "page-header.less";
 @import "features.less";
 @import "main-heading.less";
@@ -6,24 +12,8 @@
 @import "short-info.less";
 @import "reviews.less";
 @import "button.less";
-
-@font-face {
-  font-family: "Open Sans";
-  src: url("/fonts/opensans.woff") format("woff"), url("/fonts/opensans.woff2") format("woff2");
-  font-style: normal;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Open Sans";
-  src: url("/fonts/opensansbold.woff") format("woff"), url("/fonts/opensansbold.woff2") format("woff2");
-  font-style: normal;
-  font-weight: bold;
-}
-
-body {
-  background-color: #ffffff;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@import "contacts.less";
+@import "footer.less";
+@import "catalog.less";
+@import "process.less";
+@import "form-main.less";
