--- a/source/less/form-main.less
+++ b/source/less/form-main.less
@@ -29,9 +29,9 @@
   padding: 0 30px;
 }
 
-.fieldset-wrapper {
+.form-section .fieldset-wrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
@@ -56,6 +56,7 @@
 }
 
 .form-section label {
+  width: 100%;
   line-height: 16px;
   font-weight: bold;
   padding: 20px 0;
@@ -140,6 +141,10 @@
     margin: 0;
     padding: 50px 50px 50px 220px;
     border: none;
+  }
+
+  .fieldset-wrapper {
+    flex-direction: row;
   }
 
   .form-section legend {
