--- a/source/less/normalize.less
+++ b/source/less/normalize.less
@@ -1,6 +1,6 @@
 html {
   line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
+  /*-webkit-text-size-adjust: 100%;*/
 }
 
 body {
@@ -19,7 +19,7 @@ hr {
 }
 
 pre {
-  font-family: monospace, monospace;
+  /*font-family: monospace, monospace;*/
   font-size: 1em;
 }
 
@@ -41,7 +41,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+  /*font-family: monospace, monospace;*/
   font-size: 1em;
 }
 
@@ -94,7 +94,7 @@ select {
 [type="reset"],
 [type="submit"],
 button {
-  -webkit-appearance: button;
+/*  -webkit-appearance: button;*/
 }
 
 [type="button"]::-moz-focus-inner,
@@ -145,16 +145,16 @@ textarea {
 }
 
 [type="search"] {
-  -webkit-appearance: textfield;
+/*  -webkit-appearance: textfield;*/
   outline-offset: -2px;
 }
 
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+/*  -webkit-appearance: none;*/
 }
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
+/*  -webkit-appearance: button;*/
   font: inherit;
 }
 
