--- a/source/less/normalize.less
+++ b/source/less/normalize.less
@@ -30,7 +30,7 @@ a {
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
-  text-decoration: underline dotted;
+/*  text-decoration: underline dotted;*/
 }
 
 b,
@@ -90,13 +90,6 @@ select {
   text-transform: none;
 }
 
-[type="button"],
-[type="reset"],
-[type="submit"],
-button {
-/*  -webkit-appearance: button;*/
-}
-
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner,
@@ -149,14 +142,11 @@ textarea {
   outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-decoration {
-/*  -webkit-appearance: none;*/
-}
 
-::-webkit-file-upload-button {
+  ::-webkit-file-upload-button {
 /*  -webkit-appearance: button;*/
   font: inherit;
-}
+  }
 
 details {
   display: block;
