--- a/source/less/form-main.less
+++ b/source/less/form-main.less
@@ -56,7 +56,6 @@
 }
 
 .form-section label {
-  width: 100%;
   line-height: 16px;
   font-weight: bold;
   padding: 20px 0;
@@ -265,14 +264,14 @@
     width: 250px;
   }
 
-  .form-section input {
-    padding: 5px 0 15px;
-
+  .form__main .form__main--email,
+  .form__main .form__main--phone {
     &::after {
-      right: 75px;
+      right: 230px;
       top: 40px;
     }
   }
+
 
   .form__main .form__main--name input {
     width: 575px;
