--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,16 +4,19 @@
 @import "visually-hidden.less";
 @import "variables.less";
 @import "index-wrapper.less";
-
 @import "page-header.less";
 @import "features.less";
 @import "main-heading.less";
 @import "promo-item.less";
 @import "short-info.less";
 @import "reviews.less";
+@import "popup.less";
 @import "button.less";
 @import "contacts.less";
 @import "footer.less";
 @import "catalog.less";
+@import "catalog-heading.less";
 @import "process.less";
 @import "form-main.less";
+@import "blank.less";
+@import "item-card.less";
