--- a/source/less/features.less
+++ b/source/less/features.less
@@ -1,10 +1,16 @@
 .features {
-  padding: 0;
+  width: 100%;
   background-color: #f9f9f9;
-  background-image: url("/img/hero-mobile@1x.jpg");
-  background-repeat: no-repeat;
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-position: center -20px;
   z-index: -1;
+
+  @media (min-resolution:144dpi),
+  (min-resolution:1.5dppx) {
+  background-image: url("../img/hero-mobile@2x.jpg"); 
+  background-size: 640px auto;
+  background-position: center -40px;
+  }
 }
 
 .features .features__heading-text {
@@ -18,15 +24,14 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  width: 100%;
-  margin: 0;
+  width: 320px; 
+  margin: 0 auto;
   padding: 0;
   list-style: none;
 }
 
 .features__list .features__item {
-  width: 100%;
-  padding: 25px 180px 30px 30px;
+  width: 320px;
 }
 
 .features__list .features__item--home {
@@ -39,8 +44,26 @@
   background-color: @dark-blue;
 }
 
-.features__list .features__item--home::after,
-.features__list .features__item--toys::after {
+.features__list .features__item--link {
+    position: relative;
+    
+      display: block;
+      padding: 25px 180px 30px 30px;
+      text-decoration: none;
+      color: @white;
+      font-weight: bold;
+      font-size: 19px;
+      
+      &:hover,
+      &:focus {
+          margin-top: -5px;
+        margin-bottom: 10px;}
+      &:active {
+      opacity: 0.5;
+      }
+    }
+    
+.features__list .features__item--link::after {
   position: absolute;
   content: "";
   top: 20px;
@@ -52,24 +75,24 @@
   opacity: 0.3;
 }
 
-.features__list .features__item--home::after {
+.features__item--home .features__item--link::after {
   right: 37px;
   width: 40px;
   height: 60px;
   background-image: url("../img/icon-interior.svg");
 }
 
-.features__list .features__item--link {
-  text-decoration: none;
-  color: @white;
-  font-weight: bold;
-  font-size: 19px;
-}
+
 /*tablet-version*/
 @media (min-width: 768px) {
   .features {
-    background-image: url("/img/hero-tablet@1x.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
     background-size: cover;
+    @media (min-resolution:144dpi),
+  (min-resolution:1.5dppx) {
+  background-image: url("../img/hero-tablet@2x.jpg"); 
+  background-size: 768px auto;
+  }
   }
 
   .features .features__heading-text {
@@ -79,6 +102,7 @@
   .features .features__list {
     position: relative;
     padding: 0 50px;
+    width: 768px; 
   }
 
   .features .features__list::after {
@@ -103,8 +127,15 @@
 /*desktop-version*/
 @media (min-width: 1250px) {
   .features {
-    background-image: url("/img/hero-desktop@1x.jpg");
+      
+    background-image: url("../img/hero-desktop@1x.jpg");
     background-position: center -80px;
+    @media (min-resolution:144dpi),
+  (min-resolution:1.5dppx) {
+  background-image: url("../img/hero-desktop@2x.jpg"); 
+  background-size: 1250px auto;
+  }
+    
   }
 
   .features .features__heading-text {
@@ -115,5 +146,6 @@
 
   .features .features__list {
     padding: 0 100px;
+    width: 1250px;
   }
 }
