--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,109 +1,133 @@
-/*<footer class="footer">
-<a class="page-footer__logo" href="#">
-  <svg class="page-footer__logo--image"
-  </svg>
-</a>
-  <ul class="footer__social">
-  <li><a class="footer__social--insta" href="#"></a></li>
-  <li><a class="footer__social--fb" href="#"></a></li>
-  <li><a class="footer__social--tw" href="#"></a></li>
-  </ul>
-  <span class="footer__copyright">Разработано<a class="footer__copyright--logo" href="#"></a></span>
-</footer>*/
 
 .footer {
-  display: flex;
-  flex-direction: column;
-  padding: 0 30px;
-  background-color: @light-gray;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 30px;
+    background-color: @light-gray;
+    align-items: center;
 }
 
 .footer .page-footer__logo {
-  display: none;
+    display: none;
 }
 
 .footer .footer__social {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  border-bottom: 1px solid #e5e5e5;
-  list-style: none;
-}
-
-.footer__social li {
-  width: 55px;
-  height: 80px;
-  background-position: center center;
-  background-repeat: no-repeat;
-  color: @black;
-}
-
-.footer__social .footer__social--insta {
-  background-image: url("../img/icon-insta.svg");
-  margin-left: auto;
-}
-
-.footer__social .footer__social--fb {
-  background-image: url("../img/icon-fb.svg");
-}
-
-.footer__social .footer__social--tw {
-  background-image: url("../img/icon-twitter.svg");
-  margin-right: auto;
-}
-
-.footer .footer__copyright {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 19px;
-  line-height: 18px;
-  font-weight: bold;
-  margin: 0 auto;
-  padding: 25px 0;
-}
-
-.footer__copyright--logo {
-  width: 30px;
-  height: 30px;
-  margin-left: 30px;
-
-  & path {
-    fill: @dark-blue;
-  }
-}
-/*tablet-version*/
-@media (min-width: 768px) {
-  .footer {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 50px;
-  }
-
-  .footer .page-footer__logo {
-    display: block;
-    width: 183px;
-    height: 34px;
-    margin-top: 55px;
-    margin-bottom: 55px;
-  }
-
-  .footer .footer__social {
-    border-bottom: none;
-    margin: 0 auto;
-  }
-
-  .footer .footer__copyright {
-    width: 183px;
     margin: 0;
-  }
+    padding: 0;
+    border-bottom: 1px solid #e5e5e5;
+    list-style: none;
 }
+
+.footer__social li {
+    padding: 25px 20px;
+}
+
+.footer__social a {
+    &:hover,
+    &:focus {
+        & path {
+            fill: #46c1ae;
+        }
+    }
+    &:active {
+        & path {
+            fill: #e5f6f4;
+        }
+    }
+}
+
+.footer__social .footer__social--insta {
+    margin-left: auto;
+}
+
+.footer__social .footer__social--tw {
+    margin-right: auto;
+}
+
+.footer .footer__copyright {
+    display: block;
+    position: relative;
+    text-decoration: none;
+    font-size: 19px;
+    line-height: 18px;
+    font-weight: bold;
+    margin: 0 auto;
+    padding: 25px 60px 25px 0;
+    color: @light-black;
+    &:active {
+        color: @gray;
+    }
+}
+
+.footer__copyright--logo {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 0;
+    top: 20px;
+    & path {
+        fill: @dark-blue;
+    }
+    &:hover,
+    &:focus {
+        & path {
+            fill: #46c1ae;
+        }
+    }
+    &:active {
+        & path {
+            fill: #e5f6f4;
+        }
+    }
+}
+
+/*tablet-version*/
+
+@media (min-width: 768px) {
+    .footer {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 50px;
+        margin: 0 auto;
+    }
+    .footer .page-footer__logo {
+        display: block;
+        width: 183px;
+        height: 34px;
+        margin-top: 55px;
+        margin-bottom: 55px;
+        &:hover,
+        &:focus {
+            & svg {
+                fill: #46c1ae;
+            }
+        }
+        &:active {
+            & svg {
+                fill: #e5f6f4;
+            }
+        }
+    }
+    .footer .footer__social {
+        border-bottom: none;
+        margin: 0 auto;
+    }
+    .footer .footer__copyright {
+        width: 183px;
+        margin: 0;
+    }
+}
+
 /*desktop-version*/
-@media (min-width: 1250px) {
-  .footer {
-    padding: 0 100px;
-  }
+
+@media (min-width: 1150px) {
+    .footer {
+        padding: 0 100px;
+    }
 }
