--- a/source/less/form-main.less
+++ b/source/less/form-main.less
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 320px;
+  margin: 0 auto;
   background-color: @white;
 }
 
@@ -25,85 +27,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 0 50px;
+  margin: 0 auto 50px;
   padding: 0 30px;
 }
 
-.form-section .fieldset-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
 
-.form__main .form-section {
-  /*width: 260px;*/
-  margin: 0 0 30px;
-  padding: 0;
-  border: none;
-  border-top: 1px solid @light-blue;
-}
-
-.form-section legend {
-  margin-bottom: 20px;
-  padding-right: 30px;
-  text-transform: uppercase;
-  text-align: left;
-  line-height: 18px;
-  font-weight: bold;
-  color: @light-blue;
-}
-
-.form-section label {
-  line-height: 16px;
-  font-weight: bold;
-  padding: 20px 0;
-  text-align: left;
-}
-
-.form-section input {
-  border: none;
-  border-bottom: 2px solid @black;
-  line-height: 18px;
-  width: 260px;
-  padding: 5px 0 15px;
-  margin: 0;
-  text-align: left;
-  color: #c7c7c7;
-}
-
-.form__main .form__main--color label,
-.form__main .form__main--type label {
-  position: relative;
-  padding: 20px 30px 20px 65px;
-
-  &::before {
-    position: absolute;
-    content: "";
-    top: 15px;
-    left: 0;
-    width: 40px;
-    height: 40px;
-    background-color: red;
-  }
-}
-
-.form__main--required {
-  margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: left;
-  color: @light-black;
-}
-
-.form__main--order {
-  background-color: @white;
-}
 /*tablet-version*/
 @media (min-width: 768px) {
+    .form {
+        width: 768px;
+    }
+
   .form__heading {
     position: relative;
+    margin-top: -60px;
+    z-index: -1;
 
     &::after {
       position: absolute;
@@ -114,7 +52,7 @@
       left: 0;
       background-image: url("../img/bg-zigzag-fill.svg");
       background-repeat: repeat;
-      background-size: auto;
+      background-size: contain;
     }
   }
 
@@ -127,163 +65,31 @@
   .form .form__main {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
     align-items: center;
-    margin: 0;
+    margin: 0 auto 50px;
     padding: 0;
-    margin-bottom: 50px;
-  }
-
-  .form__main .form-section {
-    position: relative;
-    width: 768px;
-    margin: 0;
-    padding: 50px 50px 50px 220px;
-    border: none;
-  }
-
-  .fieldset-wrapper {
-    flex-direction: row;
-  }
-
-  .form-section legend {
-    position: absolute;
-    top: 65px;
-    left: 50px;
-    line-height: 16px;
-  }
-
-  .form-section label {
-    font-size: 19px;
-    line-height: 18px;
-    padding: 20px 0;
-    margin-right: 0;
-  }
-
-  .form__main .form__main--color label {
-    width: 230px;
-    margin: 0;
-  }
-
-  .form-section input {
-    border-bottom: 2px solid @black;
-    font-size: 19px;
-    line-height: 18px;
-    padding: 5px 0 15px;
-    color: #c7c7c7;
-  }
-
-  .form__main .form__main--color,
-  .form__main .form__main--email,
-  .form__main .form__main--phone {
-    background-color: #f1f1f1;
-    position: relative;
-
-    &::after {
-      position: absolute;
-      content: "";
-      right: 75px;
-      top: 40px;
-      width: 40px;
-      height: 40px;
-      background-position: right center;
-      background-repeat: no-repeat;
-      opacity: 0.3;
-    }
-  }
-
-  .form__main .form__main--email::after {
-    background-image: url("../img/icon-mail.svg");
-  }
-
-  .form__main .form__main--phone::after {
-    background-image: url("../img/icon-phone.svg");
-  }
-
-  .form__main .form__main--name input {
-    width: 375px;
-    padding-left: 15px;
-    margin-left: 25px;
-    flex-grow: 1;
-  }
-
-  .form__main .form__main--email input,
-  .form__main .form__main--phone input {
-    width: 100%;
-    padding-left: 15px;
-    background-color: #f1f1f1;
-  }
-
-  .form__main .form__main--add textarea {
-    width: 100%;
-    padding: 15px;
-  }
-
-  .form__main .form__main--required {
-    order: 10;
-    margin: 0 50px 0 0;
-    line-height: 30px;
-  }
-
-  .form__main .form__main--order {
-    margin: 0 0 0 50px;
   }
 }
 /*desktop-version*/
 @media (min-width: 1150px) {
-  .form__heading {
-    width: 100%;
+    .form {
+        width: 1150px;
+    }
+  .form .form__heading {
+    width: 1150px;
+    margin: 0 auto;
+    font-size: 53px;
+    line-height: 57px;
+    &::after {
+      height: 20px;
+    }
   }
 
   .form .form__description {
-    padding: 120px 225px 50px;
+   width: 1150px;
+    padding: 120px 280px 50px 225px;
     font-size: 17px;
     line-height: 30px;
   }
 
-  .form__main .form-section {
-    width: 1150px;
-    padding: 50px 225px;
-  }
-
-  .form-section legend {
-    top: 65px;
-    left: 50px;
-  }
-
-  .form-section label {
-    padding: 20px 0;
-    margin-right: 0;
-  }
-
-  .form__main .form__main--color {
-    padding-right: 175px;
-  }
-
-  .form__main .form__main--color label {
-    width: 250px;
-  }
-
-  .form__main .form__main--email,
-  .form__main .form__main--phone {
-    &::after {
-      right: 230px;
-      top: 40px;
-    }
-  }
-
-
-  .form__main .form__main--name input {
-    width: 575px;
-  }
-
-  .form__main .form__main--required {
-    order: 10;
-    margin-right: 225px;
-    line-height: 30px;
-  }
-
-  .form__main .form__main--order {
-    margin-left: 225px;
-  }
 }
