--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,4 +1,5 @@
 .page-header {
+    width: 100%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -29,6 +30,13 @@
   text-decoration: none;
   font-weight: bold;
   color: @black;
+  &:hover,
+  &:focus {
+        color: #666666;
+    }
+  &:active {
+        color: #b2b2b2;
+    }
 }
 
 .page-header__nav .page-header_list--on {
@@ -42,7 +50,7 @@
   background-color: @white;
 }
 
-.page-header__user-list li {
+.page-header__user-list a {
   position: relative;
 }
 
@@ -57,6 +65,7 @@
   background-image: url("../img/icon-search.svg");
   background-repeat: no-repeat;
   opacity: 0.3;
+
 }
 
 .page-header__user-list .basket-icon::before {
@@ -64,7 +73,7 @@
 }
 /*mobile-version*/
 @media (min-width: 150px) and (max-width: 767px) {
-  .page-header__nav li {
+  .page-header__nav a {
     width: 320px;
     padding: 30px 10px 30px 75px;
     margin: 0 auto;
@@ -111,6 +120,9 @@
   .page-header {
     position: relative;
     display: flex;
+    background-color: transparent;
+    margin-bottom: -60px;
+    z-index: 2;
   }
 
   .page-header .page-header__logo {
@@ -121,12 +133,12 @@
   }
 
   .page-header .page-header__nav {
-    width: 768px;
+    width: 100%;
     margin: 0 auto;
     flex-direction: row;
     justify-content: space-between;
     align-items: stretch;
-    background-color: #fafafa;
+    background-color: transparent;
   }
 
   .page-header__nav .page-header__user-list {
@@ -139,14 +151,14 @@
     background-color: @white;
   }
 
-  .page-header__user-list li {
+  .page-header__user-list a {
     padding-left: 85px;
     padding-top: 32px;
     padding-bottom: 32px;
     border-left: 1px solid @gray;
-  }
+ }
 
-  .search-icon a {
+  .search-icon {
     font-size: 0;
   }
 
@@ -163,7 +175,7 @@
     font-size: 15px;
     text-align: left;
   }
-
+  
   .page-header__nav .page-header__delivery {
     display: block;
     text-align: right;
@@ -174,19 +186,16 @@
   }
 }
 /*desktop-version*/
-@media (min-width: 1250px) {
-  .page-header {
-    background-color: #f9f9f9;
-  }
+@media (min-width: 1150px) {
 
   .page-header .page-header__logo {
-    left: 50%;
+    left: 45%;
     top: 10px;
     width: 160px;
   }
 
   .page-header .page-header__nav {
-    width: 1250px;
+    width: 1150px;
   }
 
   .page-header__nav .page-header__user-list {
@@ -196,17 +205,15 @@
     width: 50%;
     padding: 0 50px 0 0;
     margin: 0;
-  }
+    background-color: @white;
 
-  .page-header__user-list .basket-icon a {
-    padding-right: 50px;
   }
 
   .page-header__nav .page-header__nav-list {
     display: flex;
     justify-content: flex-start;
     width: 50%;
-    padding: 0 0 0 50px;
+    padding: 0;
     margin: 0;
     background-color: @white;
     border-bottom: 1px solid @gray;
@@ -222,7 +229,6 @@
     display: flex;
     justify-content: flex-start;
     width: 50%;
-    padding-left: 50px;
   }
 
   .page-header__pop-list a {
@@ -234,6 +240,6 @@
   }
 
   .page-header__nav .page-header__delivery {
-    margin-right: 100px;
+    margin-right: 50px;
   }
 }
