--- a/source/less/short-info.less
+++ b/source/less/short-info.less
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 30px 30px 50px;
+  width: 320px;
+  margin: 30px auto 50px;
+  padding: 0 30px;
 }
 
 .short-info .short-info__heading {
   width: auto;
-  padding: 0;
   margin: 0;
   text-align: left;
 }
@@ -22,13 +23,13 @@
   list-style: none;
   line-height: 20px;
   text-align: left;
-  font-weight: bold;
 }
 
 .short-info .short-info__item {
   position: relative;
   width: 260px;
   padding-top: 80px;
+  font-weight: bold;
 }
 
 .short-info .short-info__item svg {
@@ -42,9 +43,11 @@
   }
 }
 /*tablet-version*/
-@media (min-width: 767px) {
+@media (min-width: 768px) {
   .short-info {
-    margin: 50px 50px 80px;
+    width: 768px;
+    margin: 50px auto 80px;
+    padding: 0 50px;
   }
 
   .short-info .short-info__heading {
@@ -63,7 +66,7 @@
   }
 
   .short-info .short-info__item {
-    width: 335px;
+    width: 334px;
     padding-top: 120px;
 
     &:nth-child(1) {
@@ -94,7 +97,7 @@
 /*desktop-version*/
 @media (min-width: 1250px) {
   .short-info {
-    margin: 50px 50px 80px;
+     width: 1250px;
     padding-left: 225px;
     padding-right: 175px;
   }
