--- a/source/less/features.less
+++ b/source/less/features.less
@@ -5,11 +5,10 @@
   background-position: center -20px;
   z-index: -1;
 
-  @media (min-resolution:144dpi),
-  (min-resolution:1.5dppx) {
-  background-image: url("../img/hero-mobile@2x.jpg"); 
-  background-size: 640px auto;
-  background-position: center -40px;
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 640px auto;
+    background-position: center -40px;
   }
 }
 
@@ -24,7 +23,7 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  width: 320px; 
+  width: 320px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
@@ -45,24 +44,25 @@
 }
 
 .features__list .features__item--link {
-    position: relative;
-    
-      display: block;
-      padding: 25px 180px 30px 30px;
-      text-decoration: none;
-      color: @white;
-      font-weight: bold;
-      font-size: 19px;
-      
-      &:hover,
-      &:focus {
-          margin-top: -5px;
-        margin-bottom: 10px;}
-      &:active {
-      opacity: 0.5;
-      }
-    }
-    
+  position: relative;
+  display: block;
+  padding: 25px 180px 30px 30px;
+  text-decoration: none;
+  color: @white;
+  font-weight: bold;
+  font-size: 19px;
+
+  &:hover,
+  &:focus {
+    margin-top: -5px;
+    margin-bottom: 10px;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+}
+
 .features__list .features__item--link::after {
   position: absolute;
   content: "";
@@ -82,17 +82,17 @@
   background-image: url("../img/icon-interior.svg");
 }
 
-
 /*tablet-version*/
+
 @media (min-width: 768px) {
   .features {
     background-image: url("../img/hero-tablet@1x.jpg");
     background-size: cover;
-    @media (min-resolution:144dpi),
-  (min-resolution:1.5dppx) {
-  background-image: url("../img/hero-tablet@2x.jpg"); 
-  background-size: 768px auto;
-  }
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+      background-size: 768px auto;
+    }
   }
 
   .features .features__heading-text {
@@ -102,7 +102,7 @@
   .features .features__list {
     position: relative;
     padding: 0 50px;
-    width: 768px; 
+    width: 768px;
   }
 
   .features .features__list::after {
@@ -124,18 +124,18 @@
     line-height: 30px;
   }
 }
+
 /*desktop-version*/
+
 @media (min-width: 1250px) {
   .features {
-      
     background-image: url("../img/hero-desktop@1x.jpg");
     background-position: center -80px;
-    @media (min-resolution:144dpi),
-  (min-resolution:1.5dppx) {
-  background-image: url("../img/hero-desktop@2x.jpg"); 
-  background-size: 1250px auto;
-  }
-    
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+      background-size: 1250px auto;
+    }
   }
 
   .features .features__heading-text {
