--- a/source/less/process.less
+++ b/source/less/process.less
@@ -1,162 +1,184 @@
 .process {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 30px auto 60px;
-    width: 260px;
-    &:hover,
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 30px auto 60px;
+  width: 260px;
+
+  &:hover,
   &:focus {
-  box-shadow: 10px 5px 10px @gray;    
+    box-shadow: 10px 5px 10px @gray;
   }
+
   &:active {
-  box-shadow: 5px 5px 10px @gray;    
+    box-shadow: 5px 5px 10px @gray;
   }
 }
 
 .process .process__heading {
-    position: relative;
-    display: block;
-    padding: 25px 25px 25px 90px;
-    margin: 0;
-    font-weight: bold;
-    color: @black;
+  position: relative;
+  display: block;
+  padding: 25px 25px 25px 90px;
+  margin: 0;
+  font-weight: bold;
+  color: @black;
 }
 
 .process .process__heading--icon {
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    left: 25px;
-    top: 25px;
-    & path {
-        fill: @dark-blue;
-    }
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  left: 25px;
+  top: 25px;
+
+  & path {
+    fill: @dark-blue;
+  }
 }
 
 .process .process__video {
-    position: relative;
-    padding: 0;
-    margin: 0;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 260px;
+  background-image: url("../img/video-mobile@1x.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/video-mobile@2x.jpg");
+    background-size: 260px auto;
+  }
+}
+
+.process .process__video--movie {
+  width: 260px;
 }
 
 .process .process__video--button {
-    position: absolute;
-    left: 70px;
-    top: 50px;
-    border: none;
-    background-color: transparent;
-    z-index: 10;
-    &:hover,
-    &:focus {
-        & svg 
-        {height: auto;
-        width: 120%;}
+  position: absolute;
+  left: 70px;
+  top: 50px;
+  border: none;
+  background-color: transparent;
+  z-index: 10;
+
+  &:hover,
+  &:focus {
+    & svg {
+      height: auto;
+      width: 120%;
     }
+  }
+
   &:active {
-    & svg 
-    {height: auto;
-        width: 80%;}
+    & svg {
+      height: auto;
+      width: 80%;
     }
+  }
 }
 
 .process .process__description {
-    padding: 30px 45px 30px 35px;
-    margin: 0;
-    text-align: left;
-    font-size: 13px;
-    color: @light-black;
+  padding: 30px 45px 30px 35px;
+  margin: 0;
+  text-align: left;
+  font-size: 13px;
+  color: @light-black;
 }
+
 .process .process__button--buy {
-    
-    &:hover,
-    &:focus {
-        color: @white;
-        background-color: @light-black;
-  
-    }
-    &:active {
-        color: @gray;
-  
-    }
+  &:hover,
+  &:focus {
+    color: @white;
+    background-color: @light-black;
+  }
+
+  &:active {
+    color: @gray;
+  }
 }
+
 /*tablet-version*/
 
 @media (min-width: 768px) {
+  .process {
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto 70px;
+    width: 668px;
+    border-bottom: 1px solid @gray;
+  }
 
-    .process {
-        justify-content: space-between;
-        align-items: center;
-        margin: 0px auto 70px;
-        width: 668px;
-        border-bottom: 1px solid @gray;
-    }
+  .process .process__heading {
+    padding: 45px 25px 45px 105px;
+    font-size: 20px;
+    align-self: flex-start;
+  }
 
-    .process .process__heading {
-        padding: 45px 25px 45px 105px;
-        font-size: 20px;
-        align-self: flex-start;
-    }
-    .process .process__heading--icon {
-        left: 40px;
-        top: 25px;
-    }
+  .process .process__heading--icon {
+    left: 40px;
+    top: 25px;
+  }
 
-    .process .process__video {
-        order: -1;
-        padding: 0;
-        margin: 0;
-    }
+  .process .process__video {
+    order: -1;
+    width: 668px;
+    height: 456px;
+    padding: 0;
+    margin: 0;
+    background-image: url("../img/video-tablet@1x.jpg");
 
-    .process .process__video--movie {
-        width: 668px;
-        height: 456px;
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/video-tablet@2x.jpg");
+      background-size: 668px auto;
     }
+  }
 
-    .process .process__video--button {
-        left: 280px;
-        top: 190px;
-    }
+  .process .process__video--button {
+    left: 280px;
+    top: 190px;
+  }
 
-    .process .process__description {
-        padding: 0 40px 40px 40px;
-        font-size: 15px;
-        line-height: 30px;
-    }
+  .process .process__description {
+    padding: 0 40px 40px 40px;
+    font-size: 15px;
+    line-height: 30px;
+  }
 
-    .process .process__button--buy {
-        width: 583px;
-        margin: 0 auto 50px;
-        
-    }
+  .process .process__button--buy {
+    width: 583px;
+    margin: 0 auto 50px;
+  }
 }
 
-/*desctop-version*/
+/*desktop-version*/
 
 @media (min-width: 1150px) {
+  .process {
+    position: relative;
+    justify-content: flex-start;
+    margin: 0 auto 110px;
+    width: 1050px;
+    padding: 15px 50px 60px 700px;
+  }
 
-    .process {
-        position: relative;
-        justify-content: flex-start;
-        margin: 0 auto 110px;
-        width: 1050px;
-        padding: 15px 50px 60px 700px;
-    }
+  .process .process__video {
+    position: absolute;
+    width: 680px;
+    height: 430px;
+    top: 0;
+    left: 0;
+    background-image: url("../img/video-desktop@1x.jpg");
 
-    .process .process__video {
-        position: absolute;
-        top: 0;
-        left: 0;
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/video-desktop@2x.jpg");
+      background-size: 680px auto;
     }
+  }
 
-    .process .process__video--movie {
-        width: 680px;
-        height: 430px;
-        margin: 0;
-        padding: 0;
-    }
-
-    .process .process__button--buy {
-        width: 230px;
-        margin: 0 auto;
-    }
+  .process .process__button--buy {
+    width: 230px;
+    margin: 0 auto;
+  }
 }
