--- a/source/less/blank.less
+++ b/source/less/blank.less
@@ -385,6 +385,10 @@
     margin-right: 0;
   }
 
+  .blank .blank__section--type {
+    padding-bottom: 65px;
+  }
+
   .blank .blank__section--color {
     padding-right: 175px;
   }
