--- a/source/less/form-main.less
+++ b/source/less/form-main.less
@@ -99,7 +99,7 @@
 
   .form .form__description {
     width: 1150px;
-    padding: 120px 280px 50px 225px;
+    padding: 115px 240px 0 225px;
     font-size: 17px;
     line-height: 30px;
   }
